[package]
name = "widecode"
version = "0.1.0"
edition = "2021"
links = "samwid"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
base64 = "0.13.0"
image = "0.23.14"

[build-dependencies]
bindgen = "0.59.1"

[dev-dependencies]
clap = "2.33.3"


[[example]]
name = "witojpeg"


